aligned stopper a bit

--- a/src/components/Stopper/components/stopper/stopper.scss
+++ b/src/components/Stopper/components/stopper/stopper.scss
@@ -12,9 +12,8 @@ $circumference: 2 * 3.14 * $circle-radius; // "circumference" = "girth"
   justify-content: center;
   align-items: center;
   margin: 0 auto;
-
-  height: 250px;
-  width: 250px;
+  height: 270px;
+  width: 240px;
 }
 
 .stopper-circle {
